Managed the MySql implementation of some methods for Account, User, Ad, Home, Room, University, LeaseRequest DAO